@@ -30,7 +30,7 @@
 			<END>'</END>
 		</SPAN>
 
-		<EOL_SPAN TYPE="COMMENT1">//</EOL_SPAN>
+		<EOL_SPAN TYPE="COMMENT2">//</EOL_SPAN>
 
 		<!-- some of these should be marked OPERATOR -->
 		<!-- <SEQ TYPE="NULL">)</SEQ>
